<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/e59379e89cd5403109aa9ab4ad867045">

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000000"
        android:backgroundTint="#E1DAAC"
        android:text="@string/TimeLimit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#E4A3A3"
        android:text="@string/level1" />

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/cprogressbar"/>


    <Button
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/itemX2"
        android:drawableLeft="@drawable/ggo"
        android:text="@string/itemX2"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="327dp"
        android:layout_height="491dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/touchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
