<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:contentDescription="@string/setting"
            android:src="@drawable/gg"
            />

        <LinearLayout
            android:layout_width="386dp"
            android:layout_height="321dp"
            android:background="#832D2D"
            android:foregroundTint="#A87171"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="253dp"
                android:layout_gravity="center"
                android:background="@drawable/backgorund"
                android:backgroundTint="#97FF85"
                android:backgroundTintMode="src_over"
                android:gravity="center"
                android:orientation="vertical"
                tools:context=".SettingActivity">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:contentDescription="@string/challengeGamePlay"
                    android:src="@drawable/challengegameplay"
                    />

                <RadioGroup
                    android:layout_width="328dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:background="#F0F395"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_pirates"
                        android:layout_width="157dp"
                        android:layout_height="match_parent"
                        android:text="@string/Easy" />

                    <RadioButton
                        android:id="@+id/radio_ninjas"
                        android:layout_width="182dp"
                        android:layout_height="match_parent"
                        android:text="@string/Hard" />

                </RadioGroup>

                <ImageButton
                    android:id="@+id/button3"
                    android:layout_width="297dp"
                    android:layout_height="74dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/setting"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/backtomenu" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
